content：agent接口配置化